kubernetes/toplard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toplard
spec:
  replicas: 3
  selector:
    matchLabels:
      app: toplard
  template:
    metadata:
      labels:
        app: toplard
    spec:
      containers:
      - name: toplard
        image: dontrebootme/microbot:v1
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 30m
            memory: 5Mi
          limits:
            cpu: 60m
            memory: 10Mi
