kubernetes/toplard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: toplard
spec:
  selector:
    app: toplard
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
