kubernetes/toplard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: toplard-ingress
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
    # Rate limiting to prevent DoS attacks
    #nginx.ingress.kubernetes.io/limit-rps: "10"
    # Enable OWASP ModSecurity Core Rule Set for WAF
    #nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    #nginx.ingress.kubernetes.io/enable-owasp-core-rules: "false"
    #nginx.ingress.kubernetes.io/modsecurity-snippet: |
    #  SecRuleEngine On
    # SecRequestBodyAccess On
     # # SecAuditEngine RelevantOnly
     # # SecAuditLogParts ABIJDEFHZ
     # SecAuditLog /var/log/modsec_audit.log
     # Include /etc/nginx/owasp-modsecurity-crs/nginx-modsecurity.conf
    # add a catchall to direct dangerous looking paths
    nginx.ingress.kubernetes.io/default-backend: custom-error-service
spec:
  tls:
    - hosts:
      - toplard.servebeer.com
      secretName: toplard-ingress-tls
#    - hosts:
#      - topman.servebeer.com
#      secretName: topman-ingress-tls
  rules:
    - host: toplard.servebeer.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: toplard
                port:
                  number: 80
